test multi-arch build and ghcr

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,20 +34,19 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}/freecad:amd64
+          tags: ghcr.io/uptoolapp/freecad:amd64
         
-      # - name: Build and Push for ARM64
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     platforms: linux/arm64
-      #     push: true
-      #     tags: ghcr.io/${{ github.repository }}/freecad:arm64
+      - name: Build and Push for ARM64
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/arm64
+          push: true
+          tags: ghcr.io/uptoolapp/freecad:arm64
         
-      # - name: Merge Multi-Arch Image
-      #   run: |
-      #     docker buildx imagetools create \
-      #       --tag ghcr.io/${{ github.repository }}/freecad:latest \
-      #       ghcr.io/${{ github.repository }}/freecad:amd64 \
-      #       ghcr.io/${{ github.repository }}/freecad:arm64
-      
+      - name: Merge Multi-Arch Image
+        run: |
+          docker buildx imagetools create \
+            --tag ghcr.io/uptoolapp/freecad:latest \
+            ghcr.io/uptoolapp/freecad:amd64 \
+            ghcr.io/uptoolapp/freecad:arm64
